--- a/templates/create.html
+++ b/templates/create.html
@@ -25,8 +25,9 @@
                    <img  onclick="$('#user-opts').toggle()" id="pfp" src="/static/pfps/{{username}}.jpg?r={{r}}" onerror="if (this.src != 'https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar') this.src = 'https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar';">
       <div id="user-opts" style="display:none">
         <h3 id="user-name">Logged as {{username}}</h3>
-        <div class="options"><i class="fas fa-user-circle"></i> Profile</div>
-        <div class="options"><i class="fas fa-cog"></i> Settings</div>
+        <div class="options" onclick="window.location.href = '/user/{{username}}'"><i class="fas fa-user-circle"></i> Profile</div>
+        <!-- <div class="options"><i class="fas fa-cog"></i> Settings</div> -->
+                <div class="options"><i class="fas fa-info-circle"></i><span style="margin-left: 30px;"> About Sellio </span></div>
         <div class="options"  onclick="window.location.href = '/logout'"><i class="fas fa-sign-out-alt"></i> <span style="color: #FF6868;">Log out</span></div>
       </div>
           {%endif%}
