--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="/static/css/index.css" /> 
   <link rel="stylesheet" href="/static/css/favorites.css" /> 
 
+<script src="static/js/index.js"></script>
   {%endblock%}
   {%block title%} Favorites {%endblock%}
    
@@ -28,7 +29,8 @@
       <div id="user-opts" style="display:none">
         <h3 id="user-name">Logged as {{username}}</h3>
         <div class="options" onclick="window.location.href = '/user/{{username}}'"><i class="fas fa-user-circle"></i> Profile</div>
-        <div class="options"><i class="fas fa-cog"></i> Settings</div>
+        <!-- <div class="options"><i class="fas fa-cog"></i> Settings</div> -->
+                <div class="options"><i class="fas fa-info-circle"></i><span style="margin-left: 30px;"> About Sellio </span></div>
         <div class="options"  onclick="window.location.href = '/logout'"><i class="fas fa-sign-out-alt"></i> <span style="color: #FF6868;">Log out</span></div>
       </div>
           {%endif%}
@@ -69,7 +71,7 @@
     {%endif%}
 
       </div>
-<h2>Favorites</h2>
+<h2>Favorites ❤️</h2>
   <hr>
 
   	<div id="search-res">
