--- a/templates/chats.html
+++ b/templates/chats.html
@@ -8,6 +8,7 @@
 	var accName = "{{username}}"
 </script>
 <script src="static/js/chats.js"></script>
+<script src="static/js/index.js"></script>
 {%endblock%}
 
 {%block title%}Sellio - Chats {%endblock%}
@@ -25,7 +26,7 @@
       <div id="user-opts" style="display:none">
         <h3 id="user-name">Logged as {{username}}</h3>
         <div class="options" onclick="window.location.href = '/user/{{username}}'"><i class="fas fa-user-circle"></i> Profile</div>
-        <div class="options"><i class="fas fa-cog"></i> Settings</div>
+        <div class="options"><i class="fas fa-info-circle"></i><span style="margin-left: 30px;"> About Sellio </span></div>
         <div class="options"  onclick="window.location.href = '/logout'"><i class="fas fa-sign-out-alt"></i> <span style="color: #FF6868;">Log out</span></div>
       </div>
   <i class="fas fa-bars" style="display: none;" onclick="BringUpMobileNavBar()"></i>
@@ -37,6 +38,8 @@
          <!-- <img src="/static/logo.png" id="logo"> -->
     <img src="/static/logo.png" onclick="window.location.pathname = '/'" id="logo">
         <a href="/" class="navbar-links">Home</a>
+        <br>
+        <br>
         <a onclick="ShowLogin()"class="navbar-links">Login</a>
         <div class="new-listing-btn" onclick="ShowAuth()"><i class="fas fa-user-plus"></i><span>Sign up</span></div>
         {%else%}
