--- a/templates/listing.html
+++ b/templates/listing.html
@@ -100,7 +100,7 @@
             <div id="user-div">
                   <img src="https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar">
                   <h3 onclick="window.location.href = '/user/' + `{{listing['owner']}}`">{{listing["owner"]}}</h3>
-                  <i class="fas fa-phone-alt"></i> <span>01234567898</span>
+                  <i class="fas fa-phone-alt"></i> <span>{{targetPhone}}</span>
             </div>
             <h2>
                   {{listing["description"]}}
