--- a/templates/profile.html
+++ b/templates/profile.html
@@ -88,7 +88,7 @@
   {%if targetName != username and logged%}
    <div id="message-btn" onclick="window.location.href = '/add-user-to-chat_user={{targetName}}'"><i class="fas fa-comment-dots"></i> Message</div>
    {%endif%}
-	<i class="fas fa-phone-alt"></i> <span id="phone">01234567898</span>
+	<i class="fas fa-phone-alt"></i> <span id="phone">{{phone}}</span>
 
 	<hr>
 	<h2>Listings</h2>
