reporting and country currency

--- a/templates/index.html
+++ b/templates/index.html
@@ -157,7 +157,7 @@
             <img src="/static/listing_images/{{listing["id"]}}/0.{{listing["imageType"][0]}}">
             <h3>{{listing["title"]}}</h3>
             <br>
-            <p class="latest-listings-listing-price">{{listing["price"]}}</p>
+            <p class="latest-listings-listing-price">{{listing["currency"]}} {{listing["price"]}}</p>
             <i class="far fa-trash-alt" onclick="DeleteListing('{{listing["id"]}}')"></i>
 	      </div>
 				
@@ -168,7 +168,7 @@
               <img src="/static/listing_images/{{listing["id"]}}/0.{{listing["imageType"][0]}}">
               <h3>{{listing["title"]}}</h3>
               <br>
-              <p class="latest-listings-listing-price">{{listing["price"]}}</p>
+              <p class="latest-listings-listing-price">{{listing["currency"]}} {{listing["price"]}}</p>
               <i class="far fa-heart" onclick="Fav(this, event)"></i>
 		      </div>
             {%else%}
@@ -176,7 +176,7 @@
               <img src="/static/listing_images/{{listing["id"]}}/0.{{listing["imageType"][0]}}">
               <h3>{{listing["title"]}}</h3>
               <br>
-              <p class="latest-listings-listing-price">{{listing["price"]}}</p>
+              <p class="latest-listings-listing-price">{{listing["currency"]}} {{listing["price"]}}</p>
 		      </div>
             {%endif%}
           {%endif%}
