--- a/static/css/index.css
+++ b/static/css/index.css
@@ -327,7 +327,8 @@ body {
 	cursor: pointer;
 }
 @media screen and (-webkit-min-device-pixel-ratio:0) { 
-  .item-listing {
+/* @media only screen and (min-width: 768px){ */
+  .item-listing,::i-block-chrome { /*! if this bring back the clipping issue on iphone then just remove the "::i-block-chrome"*/
     clip: auto;
     -webkit-mask-image: -webkit-linear-gradient(top, #ffffff 0%,#ffffff 100%)
   }
