--- a/static/css/listing.css
+++ b/static/css/listing.css
@@ -197,6 +197,20 @@ h2 {
 }
 
 
+.fa-flag {
+    color: #ebac5f;
+    position: relative;
+    top: 0px;
+    right: -267px;
+    transition: 0.2s;
+    font-size: 36px;
+    cursor: pointer;
+}
+.fa-flag:hover {
+    opacity: 0.8
+}
+
+
 @media only screen and (max-width: 1070px) {
     #user-div {
             right: -172px;
