--- a/templates/listing.html
+++ b/templates/listing.html
@@ -1,6 +1,10 @@
 {%extends "base.html"%}
 
 {%block head%}
+<script>
+      var listingId = "{{listing['id']}}"
+      var currencyCode = "{{listing['currency']}}"
+</script>
 <script src="/static/js/listing.js"></script>
 <link rel="stylesheet" href="/static/css/listing.css">
 <link rel="stylesheet" href="/static/css/index.css">
@@ -86,6 +90,10 @@
                   {%if logged%}
                   <i style="font-size:34px" class="far fa-heart" onclick="Fav(this, event)"></i>
                   {%endif%}
+                  {%endif%}
+                  
+                  {%if logged%}
+                  <i onclick="ShowReport()" class="far fa-flag"></i>
                   {%endif%}
             </div>
 
