html title updates

--- a/templates/chats.html
+++ b/templates/chats.html
@@ -11,7 +11,7 @@
 <script src="static/js/index.js"></script>
 {%endblock%}
 
-{%block title%}Sellio - Chats {%endblock%}
+{%block page%} Chats {%endblock%}
 
 {%block navbar%}
 
