--- a/templates/create.html
+++ b/templates/create.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="static/css/index.css">
 <script src="static/js/index.js"></script>
 {%endblock%}
-{%block title%}Sellio - New Listing {%endblock%}
+{%block page%} New Listing {%endblock%}
 
 {%block navbar%} 
     {%if not logged%}
