--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
   </script>
   <script src="static/js/index.js"></script>
   {%endblock%}
-  {%block title%} Home {%endblock%}
+  {%block page%} Home {%endblock%}
    
 
   {%block navbar%} 
