--- a/templates/listing.html
+++ b/templates/listing.html
@@ -9,10 +9,10 @@
 <link rel="stylesheet" href="/static/css/listing.css">
 <link rel="stylesheet" href="/static/css/index.css">
 <script src="/static/js/index.js"></script>
-<title>Sellio - Listing</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=no" />
 
 {%endblock%}
+{%block page%} Listing {%endblock%}
 
 {%block navbar%} 
     {%if not logged%}
