--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,7 +6,7 @@
 	 <link rel="stylesheet" href="/static/css/index.css" /> 
 <script src="/static/js/index.js"></script>
    {%endblock%}
-   {%block title%} {{targetName}}'s Profile {%endblock%}
+   {%block title%} <title>{{targetName}}'s Profile </title>{%endblock%}
    
 
   {%block navbar%} 
