--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -7,7 +7,7 @@
 
 <script src="static/js/index.js"></script>
   {%endblock%}
-  {%block title%} Favorites {%endblock%}
+  {%block page%} Favorites {%endblock%}
    
 
   {%block navbar%} 
