--- a/static/css/listing.css
+++ b/static/css/listing.css
@@ -3,7 +3,12 @@
 }
 body {
     zoom: 100%;
+    height: 100%;
 }
+html {
+    height: 100%;
+}
+
 #title {
     font-size: 43px;
     font-weight: 600;
@@ -78,6 +83,9 @@ body {
 
 #user-div img{
     height: 81px;
+    width: 81px;
+    border-radius: 50%;
+    object-fit: cover;
 
 }
 
