--- a/templates/listing.html
+++ b/templates/listing.html
@@ -19,6 +19,7 @@
            <!-- <img src="/static/logo.png" id="logo"> -->
       <img src="/static/logo.png" onclick="window.location.pathname = '/'" id="logo">
           <a href="/" class="navbar-links">Home</a>
+          <a href="/about" class="navbar-links">About Sellio</a>
           <a onclick="ShowLogin()"class="navbar-links">Login</a>
           <div class="new-listing-btn" onclick="ShowAuth()"><i onclick="Fav(this, event)" class="fas fa-user-plus"></i><span>Sign up</span></div>
           {%else%}
@@ -34,7 +35,7 @@
         <h3 id="user-name">Logged as {{username}}</h3>
         <div class="options" onclick="window.location.href = '/user/{{username}}'"><i class="fas fa-user-circle"></i> Profile</div>
         <!-- <div class="options"><i class="fas fa-cog"></i> Settings</div> -->
-                <div class="options"><i class="fas fa-info-circle"></i><span style="margin-left: 30px;"> About Sellio </span></div>
+		<div class="options" onclick="window.location.href = '/about'"><i class="fas fa-info-circle"></i><span style="margin-left: 30px;"> About Sellio </span></div>
         <div class="options"  onclick="window.location.href = '/logout'"><i class="fas fa-sign-out-alt"></i> <span style="color: #FF6868;">Log out</span></div>
       </div>
           {%endif%}
@@ -46,31 +47,31 @@
 {%if not logged%}
          <!-- <img src="/static/logo.png" id="logo"> -->
          <a href="/" class="navbar-links">Home</a>
-         <br>
-         <br>
+         <!-- <br>
+         <br> -->
          <a onclick="ShowLogin()"class="navbar-links">Login</a>
-         <br>
-         <br>
+         <!-- <br>
+         <br> -->
          <div class="new-listing-btn" onclick="ShowAuth()"><i class="fas fa-user-plus"></i><span>Sign up</span></div>
          <img src="/static/logo.png" style="width: 85px;margin: 190px 0 0 0;cursor: pointer;" onclick="window.location.pathname = '/'" id="logo">
         {%else%}
               <!-- <img src="/static/logo.png" id="logo"> -->
     <!-- <img src="/static/logo.png" onclick="window.location.pathname = '/'" id="logo"> -->
          <a href="/" class="navbar-links">Home</a>
+         <!-- <br>
          <br>
          <br>
-         <br>
-         <br>
+         <br> -->
     <a href="/chats" class="navbar-links">Chats</a>
+         <!-- <br>
          <br>
          <br>
-         <br>
-         <br>
+         <br> -->
     <a href="/favorites" class="navbar-links">Favorites</a>
+         <!-- <br>
          <br>
          <br>
-         <br>
-         <br>
+         <br> -->
     <div class="new-listing-btn" onclick="window.location.href = '/new-listing'"><i class="fas fa-plus-circle"></i><span>New Listing</span></div>
     <!-- <img onclick="$('#user-opts').toggle()"id="pfp" src="https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar">  -->
            <img  onclick="window.location.href = '/user/{{username}}'" id="pfp" src="/static/pfps/{{username}}.jpg?r={{r}}" onerror="if (this.src != 'https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar') this.src = 'https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar';">
@@ -106,7 +107,7 @@
                   <i class="fas fa-chevron-circle-right" onclick="switchImageRight()"></i>
             </div>
             <div id="user-div">
-                  <img src="https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar">
+                  <img onclick="window.location.href = '/user/' + `{{listing['owner']}}`" src="/static/pfps/{{listing['owner']}}.jpg?r={{r}}" onerror="if (this.src != 'https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar') this.src = 'https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar';">
                   <h3 onclick="window.location.href = '/user/' + `{{listing['owner']}}`">{{listing["owner"]}}</h3>
                   <i class="fas fa-phone-alt"></i> <span>{{targetPhone}}</span>
             </div>
