--- a/templates/404.html
+++ b/templates/404.html
@@ -1,3 +1,6 @@
+<head>
+  <link rel="shortcut icon" href="/static/favicon.png" >
+</head>
 <div></div>
 <svg id="svgWrap_2" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" viewBox="0 0 700 250">
   <g>
