--- a/templates/chats.html
+++ b/templates/chats.html
@@ -62,14 +62,14 @@
          <br> -->
     <div class="new-listing-btn" onclick="window.location.href = '/new-listing'"><i class="fas fa-plus-circle"></i><span>New Listing</span></div>
     <!-- <img onclick="$('#user-opts').toggle()"id="pfp" src="https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar">  -->
-           <img  onclick="window.location.href = '/user/{{username}}'" id="pfp" src="/static/pfps/{{username}}.jpg?r={{r}}" onerror="if (this.src != 'https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar') this.src = 'https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar';">
+     <img  onclick="$('#user-opts').show();$(document).mouseup(function(e) {var container = $('#user-opts');if (!container.is(e.target) && container.has(e.target).length === 0) {container.hide()}});" id="pfp" src="/static/pfps/{{username}}.jpg?r={{r}}" onerror="if (this.src != 'https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar') this.src = 'https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar';">
     
 
     {%endif%}
 
       </div>
       
-	<h2>Chats</h2>
+	<!-- <h2>Chats</h2> -->
 
 	<h3 id="desktop-only-warning">To use Chats, open Sellio on a desktop.<br><i class="fas fa-desktop"></i> <br> <a href="/">Home</a></h3>
 	<div id="container">
@@ -85,7 +85,9 @@
 			{%endif%}
 			
 		</div>
-
+          <div style="display:none" id="mobile-user-div">
+               <center><i class="fas fa-user-friends" onclick="ShowMobileContacts()"></i> <h3>uesrname</h3></center>
+          </div>
 		<div id="messages-container">
 			<!-- <div class="message-me"><p>hello</p></div>
 			<div class="message-other"><p>hello</p></div>
@@ -94,7 +96,7 @@
 		
 
 		</div>
-		<div id="send-message-container">
+		<div style="display:none" id="send-message-container">
 			<input autocomplete="off" type="text" id="message-input" placeholder="Send message...">
 			<i class="fas fa-paper-plane" onclick="sendMessage($('#message-input').val())"></i>
 
