--- a/templates/chats.html
+++ b/templates/chats.html
@@ -74,11 +74,14 @@
 	<h3 id="desktop-only-warning">To use Chats, open Sellio on a desktop.<br><i class="fas fa-desktop"></i> <br> <a href="/">Home</a></h3>
 	<div id="container">
 		<div id="contact-list">
-			{%for contact in chats%}
-			<div class="contact" id="{{contact}}" onclick="loadMessages('{{contact}}')">
-				<img onclick="window.location.href = '/user/{{contact}}'" src="/static/pfps/{{contact}}.jpg" onerror="if (this.src != 'https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar') this.src = 'https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar';">
-				<h3>{{contact}}</h3>
-			</div>
+			{%for chat in chats%}
+                    {%with c = chat|replace(username, "")%}
+                    {%set contact = c.replace("$", "")%}
+                    <div class="contact" id="{{contact}}" onclick="loadMessages('{{contact}}')">
+                         <img onclick="window.location.href = '/user/{{contact}}'" src="/static/pfps/{{contact}}.jpg" onerror="if (this.src != 'https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar') this.src = 'https://api-private.atlassian.com/users/aa7543e682dff486562017fe2fedc6c0/avatar';">
+                         <h3>{{contact}}</h3>
+                    </div>
+                    {%endwith%}
 			{%endfor%}
 			{%if chats|length == 0%}
 			<center><h4>No chats yet.</h4></center>
