--- a/static/css/index.css
+++ b/static/css/index.css
@@ -177,6 +177,7 @@ body {
 	-webkit-box-shadow: 0px 0px 8px -1px rgba(0,0,0,0.15);
 	-moz-box-shadow: 0px 0px 8px -1px rgba(0,0,0,0.15);
 	cursor: pointer;
+	animation: search-res-anim ease-in-out 0.5s;	
 }
 .component span{ 
 	position: absolute;
@@ -301,6 +302,7 @@ body {
     grid-template-columns: auto auto auto auto;
     justify-content: center;
     /* gap: 20px; */
+    animation: search-res-anim ease-in-out 0.3s;
 
 
 }
@@ -464,6 +466,11 @@ font-size: 24px;
 
 	.navbar i{
 		display: block !important;
+	}
+
+
+	#unread-circle {
+		left: 80px !important;
 	}
 }
 
@@ -665,4 +672,17 @@ font-size: 38px;
 	left: 53px;
 	top: 2px;
 	color: #ff4f4f;
+}
+
+
+@keyframes search-res-anim {
+	from {
+		opacity: 0.2;
+		transform: scale(0.2)
+	}
+	to { 
+		opacity: 1;
+		transform: scale(1)
+	}
+	
 }
